--- a/app/templates/medtech/patient.html
+++ b/app/templates/medtech/patient.html
@@ -43,42 +43,56 @@
     
     <!-- PATIENT RECORD -->
     <div class="patient-header">
-        <p>LABORATORY TEST RESULTS</p>
+        <p>LABORATORY REPORTS</p>
     </div>
 
-    <div class="patient-table test">
+    <div class="patient-table">
         <table id="example" class="table table-striped" style="width:100%">
             <thead>
                 <tr>
-                    <th>FIRST NAME</th>
-                    <th>LAST NAME</th>
+                    <th>SUBJECT</th>
+                    <th>PATIENT NAME</th>
                     <th>GENDER</th>
-                    <th>AGE</th>
                     <th>PHYSICIAN</th>
-                    <th>RESULT</th>
+                    <th>DATE</th>
+                    <th>LAB REPORT</th>
                     <th>ACTION</th>
                 </tr>
             </thead>
             <tbody>
+                {% for labrequest in labrequests %}
                 <tr>
-                    <td>SAFIYA</td>
-                    <td>PARAGOSO</td>
-                    <td>FEMALE</td>
-                    <td>13</td>
-                    <td>EDA GRACE PARAGOSO</td>
+                    <td>{{ labrequest[2] }}</td>
+                    <td>{{ labrequest[3] }}</td>
+                    <td>{{ labrequest[4] }}</td>
+                    <td>{{ labrequest[5] }}</td>
+                    <td>{{ labrequest[7] }}</td>
                     <td>
                         <!-- VIEW RECORD -->
-                        <a href="{{ url_for('doctor.patient_record') }}">
-                            <button class="view-btn">VIEW</button>
-                        </a>
+                        <form method="GET" action="/medtech/laboratory_report/">
+                            <div class="delete-icon">
+                                <input id="order_id" name="order_id" value="{{ labrequest[0] }}" hidden>
+                                <input id="patient_id" name="patient_id" value="{{ labrequest[1] }}" hidden>
+                                <input id="report_id" name="report_id" value="{{ labrequest[6] }}" hidden>
+                                <button type="submit" style="background: none; border: none;">
+                                    <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Lab Report">
+                                </button>
+                            </div>
+                        </form> 
                     </td>
                     <td>
                         <!-- DELETE RECORD -->
-                        <a href="#">
-                            <button class="view-btn delete">DELETE</button>
-                        </a>
+                        <form method="POST" action="/medtech/delete_report/">
+                            <div class="delete-icon">
+                                <input id="patient_id" name="patient_id" value="" type="hidden">
+                                <button type="submit" style="background: none; border: none;">
+                                    <img src="{{ url_for('static', filename='images/Delete.png') }}" title="Delete Report">
+                                </button>
+                            </div>
+                        </form> 
                     </td>
                 </tr>
+                {% endfor %}
             </tbody>
         </table>
     </div>
