--- a/app/static/receptionist_style.css
+++ b/app/static/receptionist_style.css
@@ -163,7 +163,7 @@
 }
 
 table, th, td {
-    padding: 0.8rem;
+    padding: 0.65rem;
     border-collapse: collapse;
     text-align: left;
 }
@@ -171,7 +171,14 @@ table, th, td {
 table {
     width:100%;
 }
-
+.doccare-reference-number{
+    color: #000;
+    font-family: 'Montserrat';
+    font-size: 20px !important;
+    font-style: normal;
+    font-weight: 700 !important;
+    line-height: normal;
+}
 thead th {
     position: sticky;
     top: 0;
@@ -399,7 +406,7 @@ tbody tr.hide {
     left: 0;
     right: 0; 
     padding: 10px 0; /* Add padding for better spacing */
-    z-index: 999; /* Ensure it appears above other content */
+    z-index: 1;
     /*box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.1); Optional shadow for separation */
 }
 
@@ -427,18 +434,102 @@ tbody tr.hide {
     outline: none;
 }
 
+.modal {
+    display: none;
+    z-index: 3;  /* Ensure the overlay is on top of other content */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+}
+.modal-content{
+    width: 620px;
+    height: 293px;
+    flex-shrink: 0;
+    border-radius: 30px;
+    background: #FFF;
+    box-shadow: 0px 5px 20px 0px rgba(2, 119, 189, 0.60);
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
+    padding: 30px, 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal-content p{
+    color: black;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-top: 15%;
+}
+
+.modal-content button {
+    width: 150px;
+    height: 48px;
+    border-radius: 10px;
+    margin: 0 10px;
+    cursor: pointer;
+    outline: none;
+}
+
+.delete-modal-button {
+    background: #0277BD;
+    color: #FFF;
+    border: 1px solid #0277BD;
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 550;
+    line-height: normal;
+}
+
+.cancel-modal-button {
+    background: #DFF1FF;
+    color: #000;
+    border: 1px solid #DFF1FF;
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 550;
+    line-height: normal;
+}
+
+.modal-content .modal-buttons {
+    margin-top: 50px;
+}
+
+.overlay-background-container {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2; /* Ensure the overlay is on top of other content */
+}
+
+.overlay-background {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    opacity: 0.5; /* You can adjust the opacity as needed */
+    pointer-events: none;
+    border: 2px solid rgba(110, 110, 110, 0.5);
+    background: rgba(110, 110, 110, 0.5);
+    backdrop-filter: blur(2.5px);
+}
+
 
 @media (max-width: 768px) {
     td:not(:first-of-type){
         min-width: 12.1rem;
     }
 }
-
-
-/* -------------------------------------------- CALENDAR -------------------------------------------- */
-/* style here */
-
-
-
-/* -------------------------------------------- PROFILE -------------------------------------------- */
-/* style here */
