--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -50,43 +50,32 @@
     width: 80px;  
     height: 700px; 
     background-color: var(--blueC);
-    /* border-radius: 50px;  */
     position: fixed;  
-    /* margin-top: 6px;
-    margin-left: 10px; */
     padding: 8px;
     z-index: 1;
 }
 
-.logout:hover p {
-    display: flex;
-    margin-left: 35px;
-    transition: 0.5s;
+/* logout */
+.logout:hover img {
+    transform: translateY(0%);
 }
 
+/* icon */
 .icon-bg {
     width: 100%;  
     height: 62px; 
-    background-color: var(--blueB); 
     border-radius: 30px; 
     padding: 4px;
     transition: width 0.3s;
 }
 
 .icon-bg:hover {
-    width: 249px;   
-    transition: width 0.3s, background-image 0.3s;
-    background-image: linear-gradient(to right, var(--blueB), white); 
+    transition: 0.3s;
 }
 
-.icon-bg:hover p {
-    display: flex;
-    margin-left: 35px;
-    transition: 0.5s;
-}
-
+/* selected icon */
 .selected-icon-bg {
-    width: 100%;  
+    width: 95px;  
     height: 62px; 
     background-color: white; 
     border-radius: 30px; 
@@ -94,15 +83,50 @@
 }
 
 .selected-icon-bg:hover {
-    background-color: white;
-    width: 249px;   
-    transition: 0.2s;
+    transition: 0.3s;
 }
 
-.selected-icon-bg:hover p {
+/* icon text styles */
+.icon-bg p, .logout p {
     display: flex;
-    margin-left: 35px;
-    transition: 0.5s;
+    position: relative;
+    transition: all 0.3s ease-out; 
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-50%);
+    top: 15px;
+    left: 35px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: black;
+    color: white;
+    font-weight: 100;
+}
+
+.icon-bg p::after, .logout p::after {
+    content: "";
+    position: absolute;
+    width: 26px;
+    height: 26px;
+    border-radius: 2px;
+    background-color: black;
+    transform: rotate(45deg);
+    z-index: -1;
+}
+
+.selected-icon-bg p::after {
+    background-color: white;
+}
+
+.icon-bg p::after, .logout p::after {
+    left: -6px;
+    top: 5px;
+}
+
+.icon-bg:hover p, .logout:hover p {
+    left: 30px;
+    opacity: 1;
+    visibility: visible;
 }
 
 ul {
@@ -137,6 +161,17 @@ ul li p {
 }
 
 /* -------------------------------------------- SIDEBAR USER -------------------------------------------- */
+.sidenav-user-bg {
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    height: 65px; 
+    background-color: white;
+    border-radius: 350px; 
+    overflow: hidden;
+    margin-bottom: 25px;
+}
+
 .sidenav-user-bg:hover {
     display: flex;
     width: 249px;
