--- a/app/static/doctor_style.css
+++ b/app/static/doctor_style.css
@@ -2,15 +2,7 @@
 
 /* -------------------------------------------- SIDEBAR USER -------------------------------------------- */
 .sidenav-user-bg {
-    font-size: 12px;
-    display: flex;
-    align-items: center;
-    height: 65px; 
-    background-color: white;
-    border-radius: 350px; 
     margin-top: 70px;
-    margin-bottom: 25px;
-    overflow: hidden;
 }
 
 /* -------------------------------------------- ADD/UPDATE PATIENT, ADD ASSESSMENT, REQUEST LAB TEST ICON -------------------------------------------- */
@@ -63,13 +55,6 @@
     top: 50px;
     left: 200px;
     position: absolute;
-}
-
-.nav-item:hover {
-    color: var(--grayA); 
-    text-decoration: none;
-    background-color: var(--grayB); 
-    transition: 0.2s;
 }
 
 .nav-item:active {
@@ -828,6 +813,21 @@ input, select {
     font-weight: 900;
 }
 
+/* -------------------------------------------- LABORATORY REPORT -------------------------------------------- */
+.patient-bg.test {
+    width: 1230px;  
+    height: 2000px; 
+}
+
+.lab-result {
+    margin-top: 150px;
+    width: 1000px;
+    margin-right: 30px;
+}
+
+.med-header.labReport {
+    top: 1510px
+}
 
 
 
