--- a/app/templates/doctor/patient/patient_record.html
+++ b/app/templates/doctor/patient/patient_record.html
@@ -74,7 +74,7 @@
             <a class="nav-link" href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">MEDICAL ASSESSMENT</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('doctor.lab_results', patient_id=patient_id) }}">LABORATORY RESULTS</a>
+            <a class="nav-link" href="{{ url_for('doctor.lab_results', patient_id=patient_id) }}">LABORATORY REPORTS</a>
         </li>
     </ul>
 
