--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -462,7 +462,7 @@ ul li p {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 99;
+    z-index: 999;
     width: 100%;
     height: 100%;
     overflow: auto;
@@ -490,6 +490,7 @@ ul li p {
     padding: 10px;
     border-bottom: 1px solid var(--blueA);
     color: var(--blueA);
+    font-size: 12px;
 }
   
 .modal-body {
@@ -499,9 +500,10 @@ ul li p {
   
 .modal-footer {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     padding: 20px;
+    gap: 20px;
 }
   
 .modal-title {
@@ -522,6 +524,15 @@ ul li p {
     height: 40px;
     font-size: 16px;
     cursor: pointer;
+}
+
+.btn-done:active {
+    transform: translateY(1px);
+}
+
+.btn-done.cancel {
+    background-color: var(--grayB);
+    color: var(--grayA);
 }
 
 /* -------------------------------------------- FORM HEADER -------------------------------------------- */
