Added images in the static folder.

--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -28,7 +28,7 @@
             </a>
         </ul>
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Xerxes.png') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
                 <p>Admin</p>
