--- a/app/templates/receptionist/calendar.html
+++ b/app/templates/receptionist/calendar.html
@@ -33,7 +33,7 @@
             </a>
         </ul>
         <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
+            <img src="{{ url_for('static', filename='images/Kurt.png') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
                 <p>Receptionist</p>
